--- a/main.css
+++ b/main.css
@@ -95,7 +95,8 @@ i{
         margin-top: 10px;
     }
     .list{
-        font-size: 15px;
+        width: 250%;
+        font-size: 20px;
         margin-top: 10px;
     }
 
