--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ h1{
 
 }
 .list{
+    overflow: auto;
     text-transform: capitalize;
     font-size:30px;
     font-weight: 900;
@@ -51,12 +52,20 @@ h1{
     margin-right: auto;
 }
 .input-text{
+    font-weight: 900;
+    font-size: 16px;
+    width: 300px;
     height: 25px;
     margin-top: 20px;
     background: transparent;
     outline: none;
-    border: 1px solid gray;
-    border-radius: 20px;
+    border: none;
+    border-bottom: 3px solid gray;
+    color: white;
+    transition: border-bottom ease-in 500ms;
+}
+.input-text:focus{
+    border-bottom: 3px solid #352f44;
 }
 a{
     font-weight: 900;
@@ -98,5 +107,8 @@ i{
         width: 250%;
         font-size: 20px;
         margin-top: 10px;
+    }
+    .input-text{
+        width: 200px;
     }
 }
