--- a/main.css
+++ b/main.css
@@ -35,7 +35,8 @@ h1{
     border: 3px solid gray;
     box-shadow: 0px 0px 15px seagreen;
     margin-top: 20px;
-    background-color: white;
+    background-color: rgba(255,255,255,0.5);
+    backdrop-filter: blur(6px);
     width: 160%;
     height: 400px;
 }
